# cpp-neural-network

./: .gitignore  CMakeLists.txt  README.md
include/: activation.h  adam_optimizer.h  dataset.h  layer.h  metrics.h  network.h  ops.h  status.h  types.h  vec.h
include/dataset/: cifar10.h  mnist.h  sst.h  xor.h
include/layers/one_dimensional/: activation1d.h  dense.h  layer1d.h  softmax.h
include/layers/one_to_two_dim/: embedding.h  layer1to2d.h
include/layers/three_dimensional/: activation3d.h  conv2d.h  layer3d.h  maxpooling2d.h  separableconv2d.h
include/layers/three_to_one_dim/: flatten.h  layer3to1d.h
include/layers/two_dimensional/: activation2d.h  conv1d.h  conv2d.h  layer2d.h  maxpooling1d.h  maxpooling2d.h  separableconv2d.h  spatialdropout1d.h
include/layers/two_to_one_dim/: flatten.h  globalmaxpooling1d.h  layer2to1d.h
include/network/: network.h  network_1d.h  network_1to2to1d.h  network_3to1d.h  network_builder.h
include/tensors/: tensor_1d.h  tensor_2d.h  tensor_3d.h
src/: cifar10.cpp  main.cpp  mnist.cpp  sst.cpp  xor.cpp
