cmake_minimum_required(VERSION 2.8.9)
project(cpp-neural-network)
include_directories(include)
add_executable(xor src/xor.cpp)
add_executable(mnist src/mnist.cpp)
add_executable(sst src/sst.cpp)
add_executable(cifar10 src/cifar10.cpp)

find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")